--- a/styles/style.css
+++ b/styles/style.css
@@ -8,6 +8,10 @@
   padding: 0
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   width: 100%;
   height: 100vh;
@@ -566,8 +570,6 @@ ul {
 @media screen and (max-width: 1020px) {
   .main {
     background-color: #D0D0D0;
-    background-color: -moz-linear-gradient(135deg, rgba(166,166,166,1) 25%, rgba(217,217,217,1) 75%);
-    background-color: -webkit-linear-gradient(135deg, rgba(166,166,166,1) 25%, rgba(217,217,217,1) 75%);
     background-color: linear-gradient(135deg, rgba(166,166,166,1) 25%, rgba(217,217,217,1) 75%);
     background-image: url(../images/face.png);
     background-position-x: 40vw;
@@ -700,11 +702,6 @@ ul {
 }
 
 .overlay {
-  -webkit-animation-name: slideOut;
-  -webkit-animation-iteration-count: once;
-  -webkit-animation-timing-function: ease-in-out;
-  -webkit-animation-duration: 2.5s;   
-  -webkit-animation-fill-mode: forwards;
   animation-name: slideOut;
   animation-iteration-count: once;
   animation-timing-function: ease-in-out;
@@ -713,37 +710,13 @@ ul {
   z-index: 1000;
 }
 
-.yellow {
-  -webkit-animation-name: spin;
-  -webkit-animation-duration: 4000ms;
-  -webkit-animation-iteration-count: infinite;
-  -webkit-animation-timing-function: linear;
-  -moz-animation-name: spin;
-  -moz-animation-duration: 4000ms;
-  -moz-animation-iteration-count: infinite;
-  -moz-animation-timing-function: linear;
-  -ms-animation-name: spin;
-  -ms-animation-duration: 4000ms;
-  -ms-animation-iteration-count: infinite;
-  -ms-animation-timing-function: linear;
-  
+.yellow {  
   animation-name: spin;
   animation-duration: 4000ms;
   animation-iteration-count: infinite;
   animation-timing-function: linear;
 }
-@-ms-keyframes spin {
-  from { -ms-transform: rotate(0deg); }
-  to { -ms-transform: rotate(360deg); }
-}
-@-moz-keyframes spin {
-  from { -moz-transform: rotate(0deg); }
-  to { -moz-transform: rotate(360deg); }
-}
-@-webkit-keyframes spin {
-  from { -webkit-transform: rotate(0deg); }
-  to { -webkit-transform: rotate(360deg); }
-}
+
 @keyframes spin {
   from {
       transform:rotate(0deg);
@@ -752,3 +725,18 @@ ul {
       transform:rotate(360deg);
   }
 }
+
+/* Extra small devices (phones, 600px and down) */
+/* @media only screen and (max-width: 600px) {...} */
+
+/* Small devices (portrait tablets and large phones, 600px and up) */
+/* @media only screen and (min-width: 600px) {...} */
+
+/* Medium devices (landscape tablets, 768px and up) */
+/* @media only screen and (min-width: 768px) {...} */
+
+/* Large devices (laptops/desktops, 992px and up) */
+/* @media only screen and (min-width: 992px) {...} */
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
+/* @media only screen and (min-width: 1200px) {...} */
